fixed alignment

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -56,7 +56,7 @@ header {
 
 .lower {
   display: inline-block;
-  width: 24.3%;
+  width: 24.45%;
   height: 300px;
 }
 
